changed destination cards

--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,8 @@ nav .brand-logo {
 .uppercase{
     text-transform: uppercase;
 }
+
+.container{
+    padding-left: 10px;
+    padding-right: 10px;
+}
